<resources>
    <string name="app_name">Real Estate Manager</string>
    <string name="location_maps">location_maps</string>
    <string name="location_image">location_image</string>
    <string name="bedroom_image">bedroom_image</string>
    <string name="bathroom_image">bathroom_image</string>
    <string name="room_image">room_image</string>
    <string name="surface_image">surface_image</string>
    <string name="estate_image">estate_image</string>

    <string name="button_estate_form">Ajout/modification d\'un bien</string>

    <string name="title_item_list">Items</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="title_estate_list">Estates</string>
    <string name="title_estate_detail">Estate Detail</string>

    <!-- FORM -->
    <string name="status">Statut</string>
    <string name="agent">Agent immobilier</string>
    <string name="insert_date">Date d\'entrée sur le marché</string>
    <string name="sale_date">Date de vente</string>
    <string name="type">Type</string>
    <string name="price">Prix</string>
    <string name="description">Description</string>
    <string name="surface">Surface</string>
    <string name="number_of_rooms">Nombre de pièces</string>
    <string name="number_of_bedrooms">Nombre de chambres</string>
    <string name="number_of_bathrooms">Nombre de salles de bains</string>
    <string name="location">Adresse</string>
    <string name="zip_code">Code postal</string>
    <string name="city">Ville</string>
    <string name="country">Pays</string>
    <string name="form_title">Ajout d\'un nouveau bien</string>
    <string name="btn_save">ENREGISTRER</string>
    <string name="form_save">Bien enregistré avec succès</string>
    <string name="form_error">Champ obligatoire</string>
    <string name="error_happened">Une erreur s\'est produite</string>
    <string name="error_input">Vous devez remplir tous les champs pour enregistrer ce bien.</string>
    <string name="error_image">Vous devez ajouter une image pour enregistrer ce bien.</string>
    <string name="camera_image">Prendre une photo</string>
    <string name="gallery_image">Ouvrir la galerie</string>
    <string name="points_of_interest">Points d\'intérêts à proximité</string>
    <string name="maps_estates">Carte des biens</string>
    <string name="today_date">Date du jour</string>
    <string name="internet">Vérification de la connexion Internet</string>
    <string name="mortgage_loan">Simulateur de prêt immobilier</string>
    <string name="filter">Filtrer les biens</string>
    <string name="loan_amount">Montant de votre prêt</string>
    <string name="interest_rate">Taux d\'intérêt</string>
    <string name="loan_duration">Durée de votre prêt</string>
    <string name="euro_to_dollar">Euro vers Dollar</string>
    <string name="dollar_to_euro">Dollar vers Euro</string>
    <string name="cancel">Annuler</string>
    <string name="erase">Effacer</string>
    <string name="validate">Valider</string>
    <string name="estate_filter">Filtre des biens</string>
    <string name="monthly_payment">Calcul des mensualités de votre prêt immobilier</string>
    <string name="amount_monthly_payment">Montant des mensualités : </string>
    <string name="converter">Conversion de devises</string>
    <string name="internet_connected">Vous êtes connecté à internet !</string>
    <string name="internet_disconnected">Vous n\'êtes pas connecté à internet !</string>
    <string name="dollar">$</string>
    <string name="rooms">pièce(s)</string>
    <string name="bedrooms">chambre(s)</string>
    <string name="bathrooms">salle(s) de bain</string>
    <string name="add_the">Ajouté le</string>
    <string name="sale_the">Vendu le</string>
    <string name="not_sold">Non vendu</string>
    <string name="agent_fragment">Agent :</string>
    <string name="no_image">Pas d\'image</string>
    <string name="add_description">Ajouter une description</string>
    <string name="enter_description_image">Merci de renseigner une description pour cette image</string>
    <string name="description_saved">Description enregistrée</string>
    <string name="enter_description">Merci de renseigner une description</string>
    <string name="sale">Vendu</string>
    <string name="image_saved">Image enregistrée</string>
    <string name="meter">m²</string>
    <string name="no_result">Aucun résultat</string>
    <string name="no_selection">Merci de sélectionner un bien pour l\'afficher</string>

</resources>
