<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.form.EstateFormActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        tools:context=".ui.form.EstateFormActivity">

        <!-- TITLE -->
        <TextView
            android:id="@+id/form_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/form_title"
            android:textSize="45sp"
            android:textStyle="bold"
            android:paddingTop="10dp"
            android:paddingBottom="20dp"
            app:drawableBottomCompat="@drawable/divider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <!-- ################################################# -->

        <!-- Images -->
        <ImageView
            android:id="@+id/form_image_view_image"
            android:layout_width="0dp"
            android:layout_height="170dp"
            android:background="#D1D1D1"
            android:contentDescription="@string/estate_image"
            android:scaleType="fitXY"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/form_title" />

        <!-- ################################################# -->

        <!-- Status -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/form_text_input_status"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/status"
            android:labelFor="@+id/form_autocomplete_status"
            android:paddingTop="30dp"
            android:paddingBottom="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/form_image_view_image">

            <AutoCompleteTextView
                android:id="@+id/form_autocomplete_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"/>
        </com.google.android.material.textfield.TextInputLayout>
        <!-- Agent -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/form_text_input_agent"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/agent"
            android:labelFor="@+id/form_autocomplete_agent"
            android:paddingBottom="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/form_text_input_status">

            <AutoCompleteTextView
                android:id="@+id/form_autocomplete_agent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"/>
        </com.google.android.material.textfield.TextInputLayout>
        <!-- Insert Date -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/form_text_input_insert_date"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/insert_date"
            app:errorEnabled="true"
            android:focusable="false"
            android:focusableInTouchMode="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/form_text_input_agent"
            app:startIconDrawable="@drawable/ic_calendar_small">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/form_text_input_edit_insert_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"/>

        </com.google.android.material.textfield.TextInputLayout>
        <!-- Sale Date -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/form_text_input_sale_date"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/sale_date"
            app:errorEnabled="true"
            android:focusable="false"
            android:focusableInTouchMode="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/form_text_input_insert_date"
            app:startIconDrawable="@drawable/ic_calendar_small">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/form_text_input_edit_sale_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none" />

        </com.google.android.material.textfield.TextInputLayout>

        <!-- ################################################# -->

        <!-- Type -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/form_text_input_type"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/type"
            android:labelFor="@id/form_autocomplete_type"
            android:paddingBottom="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/form_text_input_sale_date">

            <AutoCompleteTextView
                android:id="@+id/form_autocomplete_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"/>

        </com.google.android.material.textfield.TextInputLayout>

        <!-- Price -->
        <TextView
            android:id="@+id/form_title_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/price"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/form_text_input_type"/>
        <com.google.android.material.slider.Slider
            android:id="@+id/form_slider_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:valueFrom="0.0"
            android:valueTo="1000000.0"
            android:stepSize="1000"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/form_title_price"/>

        <!-- Surface -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/form_text_input_surface"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/surface"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/form_slider_price"
            app:startIconDrawable="@drawable/ic_measure_small">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal" />

        </com.google.android.material.textfield.TextInputLayout>
        <!-- Number of rooms -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/form_text_input_rooms"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/number_of_rooms"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/form_text_input_surface"
            app:startIconDrawable="@drawable/ic_home_small">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number" />

        </com.google.android.material.textfield.TextInputLayout>
        <!-- Number of bathrooms -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/form_text_input_bathrooms"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/number_of_bathrooms"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/form_text_input_rooms"
            app:startIconDrawable="@drawable/ic_bathtub_small">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number" />

        </com.google.android.material.textfield.TextInputLayout>
        <!-- Number of bedrooms -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/form_text_input_bedrooms"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/number_of_bedrooms"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/form_text_input_bathrooms"
            app:startIconDrawable="@drawable/ic_bed_small">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number" />

        </com.google.android.material.textfield.TextInputLayout>

        <!-- ################################################# -->

        <!-- Description -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/form_text_input_description"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/description"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/form_text_input_bedrooms">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:gravity="top"
                android:inputType="textMultiLine" />

        </com.google.android.material.textfield.TextInputLayout>

        <!-- ################################################# -->

        <!-- Location -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/form_text_input_location"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/location"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/form_text_input_description"
            app:startIconDrawable="@drawable/ic_placeholder_small">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPostalAddress" />

        </com.google.android.material.textfield.TextInputLayout>
        <!-- Zip Code -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/form_text_input_zip_code"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:paddingStart="0dp"
            android:paddingEnd="10dp"
            android:hint="@string/zip_code"
            app:errorEnabled="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/form_text_input_location">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number" />

        </com.google.android.material.textfield.TextInputLayout>
        <!-- City -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/form_text_input_city"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/city"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/form_text_input_zip_code"
            app:layout_constraintTop_toBottomOf="@+id/form_text_input_location">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPostalAddress" />

        </com.google.android.material.textfield.TextInputLayout>
        <!-- Country -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/form_text_input_country"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/country"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/form_text_input_zip_code">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPostalAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- ################################################# -->

        <Button
            android:id="@+id/form_btn_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/btn_save"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/form_text_input_country" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>